Finished phon phon project

--- a/phon_phon_project/References.bib
+++ b/phon_phon_project/References.bib
@@ -20617,7 +20617,7 @@ L'auto-correction dans le discours se fait typiquement en trois temps. Dans un p
 	author = {Byrne, Catherine and Foulkes, Paul},
 	month = jun,
 	year = {2004},
-	keywords = {forensic speaker identification, formant analysis, Formants (Speech), Language \& languages, Linguistics, mobile phone transmission, Vowels, Wireless communications},
+	keywords = {Linguistics, Language \& languages, Vowels, forensic speaker identification, formant analysis, Formants (Speech), mobile phone transmission, Wireless communications},
 	pages = {83--102}
 }
 
@@ -20632,4 +20632,17 @@ L'auto-correction dans le discours se fait typiquement en trois temps. Dans un p
 	year = {2001},
 	pages = {80--99},
 	file = {Künzel - Beware of the ‘telephone effect’ the influence of.pdf:C\:\\Users\\josh8\\Zotero\\storage\\35JRJXBI\\Künzel - Beware of the ‘telephone effect’ the influence of.pdf:application/pdf}
+}
+
+@article{de_decker_for_2011,
+	title = {For the {Record}: {Which} {Digital} {Media} {Can} be {Used} for {Sociophonetic}  {Analysis}?},
+	volume = {17},
+	abstract = {Sociolinguists now have more options for collecting speech data than ever before. Informants who might otherwise be inaccessible to the analyst could record themselves using smartphones and personal computers; researchers might also consider YouTube or recordings uploaded to other internet sites as sources of data. However, digital compression techniques simplify some acoustic content and discard others (Bulgin, De Decker \& Nycz 2010) while lower-quality microphones may distort the quality of the signal (Van Son, R.J.J.H. 2005). Therefore, before such data can be used for dialect research, it is crucial to determine if these media affect the reliability of acoustic analyses (Gonzalez, Cervera and Llau 2003; Gonzalez and Cervera 2001). As an initial test, we looked the effect of these devices on representations of the vowel space. Male and female speakers were recorded reading a word list containing 10 English monophthongs in h\_d context using a Roland Edirol R-09 (WAV format) recorder, an Apple iPhone (lossless Apple m4a), a Macbook Pro running Praat 5.1 (WAV) and a Mino Flip video camera (AVI converted to AIFF). The Mino Flip file was then uploaded to Youtube and subsequently downloaded (MP3) for analysis. Speakers read each word 3 times while seated in a quiet room with the recorders placed on a table in front of them. Measurements of F1 through F4 were taken at the temporal midpoint of each vowel using Praat 5.1. Differences between recording formats were tested in R using a Repeated Measures ANOVA with separate runs for each formant (F1-F4). Preliminary results indicate that the Mino and Mino-derived YouTube formats differ substantially from the lossless Edirol recording. F1 values for most vowels were raised in Mino and Youtube measurements. F2 was also affected, such that front vowels were artificially raised while back vowels were lowered. Thus the vowel space is effectively altered with lowering along the F1 dimension and a widening of the space along the F2 dimension. These effects seem to be exaggerated for the female speaker. Based on these results, Macbook Pro and iPhone may be suitable recording options for studying the vowel spaces of speakers. Mino and its Youtube derivative show a number of significant deviations from lossless recordings indicating that audio from these devices should not be used for this type of analysis until corrective measures are identified.},
+	language = {English},
+	number = {2},
+	journal = {University of Pennsylvania Working Papers in Linguistics},
+	author = {De Decker, Paul and Nycz, Jennifer},
+	year = {2011},
+	pages = {50--59},
+	file = {Decker et Nycz - For the Record Which Digital Media Can be Used fo.pdf:C\:\\Users\\josh8\\Zotero\\storage\\V5RI96BP\\Decker et Nycz - For the Record Which Digital Media Can be Used fo.pdf:application/pdf}
 }
